--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -20,10 +20,11 @@ aside,
 footer {
   margin: 0 1.5% 24px 1.5%;
 }
-section {
+.section {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 5%;
 }
 aside {
   float: right;
