Fixed link at bottom

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -5,7 +5,7 @@ body {
   background-color: @df-light-gray;
 }
 
-.container {
+.box {
   .display-flex();
 }
 
@@ -49,8 +49,8 @@ body {
   margin: 0 1.5%;
   background-color: @df-off-white;
   
+  
 }
-
 
 
 .section {
